--- a/react-notes-app/imports/client/styles/_base.scss
+++ b/react-notes-app/imports/client/styles/_base.scss
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+  background: $body-background-color;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $base-font-size;
 }
