add default color

--- a/react-notes-app/imports/client/styles/_base.scss
+++ b/react-notes-app/imports/client/styles/_base.scss
@@ -9,6 +9,7 @@ html {
 
 body {
   background: $body-background-color;
+  color: $body-default-color;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $base-font-size;
 }
@@ -28,7 +29,7 @@ p {
 }
 
 a {
-  color: black;
+  color: $body-default-color;
 }
 
 input[type=text], input[type=email], input[type=password] {
