--- a/react-notes-app/imports/client/styles/_variables.scss
+++ b/react-notes-app/imports/client/styles/_variables.scss
@@ -10,7 +10,7 @@ $body-default-color: #333;
 
 // Spacing
 $space: 1.4rem;
-$site-max-width: 50rem;
+$site-max-width: 100rem;
 
 // Font Sizes
 $base-font-size: 1.6rem;
@@ -26,7 +26,6 @@ $boxed-view-bg: white;
 $boxed-view-border-color: $grey;
 
 // Button
-
 $button-bg: $brand-primary;
 $button-color: white;
 $button-pill-color: $brand-primary;
@@ -37,8 +36,14 @@ $button-secondary-border-color: $grey;
 // Header
 $header-bg: $brand-primary;
 $header-color: white;
+$header-height: 6rem;
 
 // Item
 $item-bg: $lightgrey;
 $item-border: darken($item-bg, 8%);
 $item-text-color: $dark-grey;
+
+//Page Content
+$page-content-sidebar-width: 30rem;
+$page-content-main-width: calc(#{$site-max-width} - #{$page-content-sidebar-width});
+$page-content-height: calc(100vh - #{$header-height});
