--- a/react-notes-app/imports/client/styles/components/_page-content.scss
+++ b/react-notes-app/imports/client/styles/components/_page-content.scss
@@ -3,16 +3,28 @@
   height: $page-content-height;
   margin: 0 auto;
   max-width: $site-max-width;
-  padding: $large-space $space;
+
+  @media(min-width: $mediaChange) {
+    padding: $large-space $space;
+  }
 }
 
 .page-content__sidebar {
-  display: flex;
+  display: none;
   padding-right: $large-space;
   width: $page-content-sidebar-width;
+
+  @media(min-width: $mediaChange) {
+    display: flex;
+  }
 }
+
 
 .page-content__main {
   display: flex;
-  width: $page-content-main-width;
+  width: 100%;
+
+  @media(min-width: $mediaChange) {
+    width: $page-content-main-width;
+  }
 }
